cleaned up workspace and updated readme

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5"/>
-    <link rel="icon" href="devchallenges.png" />
+    <link rel="icon" href="./img/devchallenges.png" />
     <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -33,7 +33,7 @@
         <!-- Hero Page -->
         <p class="tagline side-wrapper">Unhappy with your website?</p>
         <h1 class="hero-main_heading side-wrapper">We create beautiful and fast web services</h1>
-        <img src="./heroImage.jpg" alt="hero image" class="hero">
+        <img src="./img/heroImage.jpg" alt="hero image" class="hero">
         <h2 class="hero-secondary_heading">Story, emotion and purpose</h2>
         <p class="hero-main_description side-wrapper">We help transform your ideas into real world applications that will outperform your toughest competition and help you achieve your strategic goals in short period of time.</p>
         <p class="hero-secondary_description side-wrapper">Want us to contact you?</p>
@@ -81,19 +81,19 @@
           <div class="portfolio-list">
             <!-- portfolio 1 -->
             <div class="portfolio">
-              <div class="portfolio-img-container"><img src="./smarthome.jpg" alt="smarthome" class="portfolio-img"></div>
+              <div class="portfolio-img-container"><img src="./img/smarthome.jpg" alt="smarthome" class="portfolio-img"></div>
               <p class="portfolio-type">Full stack application</p>
               <h3 class="portfolio-name">Smart home dashboard</h3>
             </div>
             <!-- portfolio 2 -->
             <div class="portfolio">
-              <div class="portfolio-img-container"><img src="././onboard.png" alt="onboard" class="portfolio-img"></div>
+              <div class="portfolio-img-container"><img src="./img/onboard.png" alt="onboard" class="portfolio-img"></div>
               <p class="portfolio-type">UX/UI design</p>
               <h3 class="portfolio-name">Onboard application</h3>
             </div>
             <!-- portfolio 3 -->
             <div class="portfolio">
-              <div class="portfolio-img-container"><img src="./smarthome.jpg" alt="smarthome" class="portfolio-img"></div>
+              <div class="portfolio-img-container"><img src="./img/smarthome.jpg" alt="smarthome" class="portfolio-img"></div>
               <p class="portfolio-type">Mobile application</p>
               <h3 class="portfolio-name">Booking system</h3>
             </div>
@@ -114,16 +114,16 @@
             <p class="team-page-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
           <div class="team-gallery">
-            <div class="team-img-container"><img src="./person1.png" alt="member one" class="team-member-img"></div>
-            <div class="team-img-container"><img src="./person2.png" alt="member two" class="team-member-img"></div>
-            <div class="team-img-container"><img src="./person3.png" alt="member three" class="team-member-img"></div>
+            <div class="team-img-container"><img src="./img/person1.png" alt="member one" class="team-member-img"></div>
+            <div class="team-img-container"><img src="./img/person2.png" alt="member two" class="team-member-img"></div>
+            <div class="team-img-container"><img src="./img/person3.png" alt="member three" class="team-member-img"></div>
           </div>
         </article>
         <!-- Testimonial page -->
         <article class="testimonial-page">
           <h1 class="testimonial-heading">“Fast and outstanding resutls. Edie understands their customer’s needs. They have a young and talented team.”</h1>
           <div class="testimonial-user">
-            <div class="testimonial-user-imgcontainer"><img src="./person4.png" alt="testimonial user" class="testimonial-user-img"></div>
+            <div class="testimonial-user-imgcontainer"><img src="./img/person4.png" alt="testimonial user" class="testimonial-user-img"></div>
             <div class="testimonial-user-details">
               <h4 class="testimonial-user-name">Carlos Tran</h4>
               <p class="testimonial-user-company">The Decorate Gatsby</p>
